--- a/frontend/src/components/Login/Login.css
+++ b/frontend/src/components/Login/Login.css
@@ -1,4 +1,4 @@
-.register {
+.login {
     max-width: 400px;
     margin: 0 auto;
     padding: 1rem;
@@ -7,7 +7,7 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
   
-  .register h2 {
+  .login h2 {
     text-align: center;
     margin-bottom: 1rem;
   }
@@ -21,8 +21,7 @@
     margin-bottom: 0.5rem;
   }
   
-  .form-group input,
-  .form-group select {
+  .form-group input {
     width: 100%;
     padding: 0.5rem;
     border: 1px solid #ddd;
