--- a/frontend/src/components/Inventory/Inventory.css
+++ b/frontend/src/components/Inventory/Inventory.css
@@ -20,7 +20,9 @@
   background-color: var(--background-color);
   border-radius: var(--border-radius);
   box-shadow: var(--box-shadow);
-  transition: transform var(--transition), box-shadow var(--transition);
+  transition:
+    transform var(--transition),
+    box-shadow var(--transition);
 }
 
 .add-inventory:hover {
@@ -52,7 +54,9 @@
   padding: 0.75rem;
   border: 1px solid var(--border-color);
   border-radius: 6px;
-  transition: border-color var(--transition), box-shadow var(--transition);
+  transition:
+    border-color var(--transition),
+    box-shadow var(--transition);
 }
 
 .form-group input:focus {
@@ -69,7 +73,10 @@ button {
   border: none;
   border-radius: 20px;
   cursor: pointer;
-  transition: background-color var(--transition), transform var(--transition), box-shadow var(--transition);
+  transition:
+    background-color var(--transition),
+    transform var(--transition),
+    box-shadow var(--transition);
   font-size: 1rem;
   margin-top: 0.5rem;
 }
@@ -80,12 +87,12 @@ button:hover {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-button[type="button"] {
+button[type='button'] {
   background-color: var(--danger-color);
   padding: 0.75rem 1.5rem;
 }
 
-button[type="button"]:hover {
+button[type='button']:hover {
   background-color: var(--danger-hover-color);
 }
 
